# langchain_test

./: agent_book_7evaluation.py  makefile  pyproject.toml  testset-generator.ipynb
Sample_Docs_Markdown/: being-an-ally.md  building-diversity-and-inclusion.md  dib-communications-strategy.md  dib-roundtables.md  dib-speaker-series.md  dib-sponsorship-program.md
